--- a/index.html
+++ b/index.html
@@ -6,32 +6,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>MB gh Page</title>
-  <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"> -->
-  <!-- 👇 my css -->
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
-  <h2> # react2022</h2>
-  <p>- 🌱 <a href="https://martin-b-07e5.github.io/" target="_blank">martin-b-07e5.github.io"</a></p>
+  
+  <pre>
+react2022
+    🌱 https://martin-b-07e5.github.io/
+    🚀 https://martin-b-07e5.github.io/tp1
+    🚀 https://martin-b-07e5.github.io/tp2
 
-  <p>- 🚀 <a href="https://martin-b-07e5.github.io/tp1" target="_blank">tp1</a></p>
-  <p>- 🚀 <a href="https://martin-b-07e5.github.io/tp2" target="_blank">tp2</a></p>
-  <p>- 👷 <a href="https://martin-b-07e5.github.io/tp4-react" target="_blank">tp4-react</a></p>
-  <p>- 👷 <a href="https://martin-b-07e5.github.io/tp4-react-v5/" target="_blank">tp4-react-v5</a></p>
-  <p>- 👷 <a href="https://martin-b-07e5.github.io/tp4-react-v6/" target="_blank">tp4-react-v6</a></p>
+themoviedb API
+    🚀 https://martin-b-07e5.github.io/tp4-react-v5/
+    🚀 https://martin-b-07e5.github.io/tp4-react-v6/
+    🚀 https://martin-b-07e5.github.io/movies-react-v6--debounce
 
-  <p>- 🚀 <a href="https://martin-b-07e5.github.io/portfolio" target="_blank">portfolio</a></p>
+newsapi API (clonarla y ejecutarla localmente)(no funciona con githubPages)
+    🚀 https://github.com/martin-b-07e5/news-app-v0.2
 
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script> -->
-  <!-- 👇 my js -->
-  <!-- <script src="./assets/js/productos.js"></script> -->
+portfolio
+    👷 https://martin-b-07e5.github.io/portfolio
+  </pre>
+  
 </body>
 
 </html>
