--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
   
   <pre>
 react2022
-    🌱 https://martin-b-07e5.github.io/
-    🚀 https://martin-b-07e5.github.io/tp1
-    🚀 https://martin-b-07e5.github.io/tp2
+    🌱 <a href="https://martin-b-07e5.github.io/" rel="_blank">MB</a>
+    🚀 <a href="https://martin-b-07e5.github.io/tp1" rel="_blank">tp1</a>
+    🚀 <a href="https://martin-b-07e5.github.io/tp2" rel="_blank">tp2</a>
 
 themoviedb API
-    🚀 https://martin-b-07e5.github.io/tp4-react-v5/
-    🚀 https://martin-b-07e5.github.io/tp4-react-v6/
-    🚀 https://martin-b-07e5.github.io/movies-react-v6--debounce
+    🚀 <a href="https://martin-b-07e5.github.io/tp4-react-v5/" rel="_blank">tp4-react-v5</a>
+    🚀 <a href="https://martin-b-07e5.github.io/tp4-react-v6/" rel="_blank">tp4-react-v6</a>
+    🚀 <a href="https://martin-b-07e5.github.io/movies-react-v6--debounce" rel="_blank">movies-react-v6--debounce</a>
 
 newsapi API (clonarla y ejecutarla localmente)(no funciona con githubPages)
-    🚀 https://github.com/martin-b-07e5/news-app-v0.2
+    🚀 <a href="https://github.com/martin-b-07e5/news-app-v0.2" rel="_blank">news-app-v0.2</a>
 
 portfolio
-    👷 https://martin-b-07e5.github.io/portfolio
+    👷 <a href="https://martin-b-07e5.github.io/portfolio" rel="_blank">portfolio</a>
   </pre>
   
 </body>
