--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>MB gh Page</title>
+  <meta http-equiv="Refresh" content="0; url=https://github.com/martin-b-07e5/martin-b-07e5.github.io/blob/main/README.md/" />
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
